# Reflecta-Ai-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: AUDIT-PRODUCTION-READINESS.md  BUILD-PLAN.md  EVAL-HARNESS-PLAN.md  HARDENING-0-9.md  REMOTE-MODE.md  ROBUSTNESS-FIXES.md
docs/_demo/: run.txt  triage.txt
eval/: README.md  __init__.py  cli.py  compare.py  metrics.py  report.py  runner.py
eval/baselines/: baseline.json
eval/fixtures/calc/: calc.py  coverage_baseline.json
eval/fixtures/calc/tests/: test_calc_partial.py
eval/fixtures/risky_io/: coverage_baseline.json  risky_io.py
eval/fixtures/risky_io/tests/: test_risky_partial.py
eval/fixtures/text_utils/: coverage_baseline.json  text_utils.py
eval/fixtures/text_utils/tests/: test_text_partial.py
eval/recordings/: README.md
eval/tests/: __init__.py  test_cli.py  test_compare.py  test_metrics.py  test_runner.py
examples/: reflecta-ci.yml  reflecta.toml
examples/sample_project/: calc.py  pricing.py  rate_table.json
examples/sample_project/.omc/state/: last-tool-error.json
examples/sample_project/tests/: test_calc_partial.py
examples/sample_project/tests/_coverloop/: test_coverloop_calc_0.py
examples/sample_project/tests/_reflecta/: test_reflecta_calc_0.py  test_reflecta_calc_1.py
proxy/: .env.example  Dockerfile  README.md  app.py  requirements.txt
proxy/tests/: test_app.py
scripts/: capture_demo.py  render_demo.py
src/coverloop/: __main__.py  skeleton.py
src/reflecta/: __main__.py  budget.py  ci.py  cli.py  config.py  coverage_report.py  environment.py  escalate.py  forge.py  gates.py  generate.py  git_ops.py  loop.py  models.py  mutation.py  prompts.py  repair.py  report.py  runner.py  salvage.py  selection.py  settings.py  skeleton.py  testability.py  ui.py  validation.py
src/reflecta/llm/: cache.py  claude_generate.py  gemini.py  groq.py  limits.py  provider.py  remote.py  router.py
tests/: test_ci.py  test_cli.py  test_cli_ci.py  test_config.py  test_coverage_isolation.py  test_coverage_report.py  test_edge_cases.py  test_environment.py  test_environment_tooling.py  test_escalate.py  test_forge.py  test_gate_stress.py  test_gates_assertion.py  test_gates_delta.py  test_generate.py  test_git_ops.py  test_isolation.py  test_limits.py  test_loop_budget.py  test_loop_escalation.py  test_loop_happy.py  test_loop_salvage.py  test_models.py  test_mutation.py  test_package.py  test_provider.py  test_regression_cross_repo.py  test_remote.py  test_repair.py  test_report.py  test_resilience.py  test_router.py  test_runner.py  test_salvage.py  test_secrets.py  test_selection.py  test_settings.py  test_smoke.py  test_smoke_install.py  test_testability.py  (+2 more)
