[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reflecta"
version = "0.0.0"
description = "Find untested Python code, generate targeted pytest tests via free LLM tiers, and keep only tests that raise coverage."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "google-genai",
    "groq",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
]

[project.scripts]
reflecta = "reflecta.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib", "-m", "not live"]
markers = ["live: requires real API keys — skipped in CI"]

[tool.coverage.run]
source = ["src/reflecta"]
