[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "reflecta"
version = "0.1.0"
description = "Find untested Python code, generate targeted pytest tests via free LLM tiers, and keep only tests that raise coverage."
readme = "README.md"
license = "MIT"
authors = [{ name = "Parthiv Paul", email = "parthiv.paul5545@gmail.com" }]
requires-python = ">=3.11"
keywords = ["testing", "coverage", "pytest", "llm", "code-generation", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
dependencies = [
    # Conservative bounds: lower bound at a known-good release, upper cap at the
    # next major so a fast-moving SDK can't silently break installs of v0.1.0.
    "typer>=0.12,<1.0",
    "google-genai>=1.0,<3.0",
    "groq>=0.11,<2.0",
    # Core (not just escalation): remote key-broker mode calls the proxy over httpx.
    "httpx>=0.27,<1.0",
]

[project.urls]
"Homepage" = "https://github.com/parthiv-2006/Reflecta-Ai-Agent"
"Bug Tracker" = "https://github.com/parthiv-2006/Reflecta-Ai-Agent/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "build",
    "twine",
]
escalation = [
    # Escalation calls the Messages API directly over httpx (the anthropic SDK
    # hangs on Windows and can't auth OAuth subscription tokens). httpx is now a
    # core dependency (remote mode needs it), so this extra is a no-op kept for
    # backwards-compatible install instructions.
    "httpx>=0.27,<1.0",
]

[project.scripts]
reflecta = "reflecta.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
# Scope to the package's own tests so the standalone proxy service (proxy/) — a
# separate project with its own deps and test runner — is never collected here.
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-m", "not live"]
markers = ["live: requires real API keys — skipped in CI"]

[tool.coverage.run]
source = ["src/reflecta"]

[tool.ruff]
# LLM-generated code (eval/recordings/ cache entries and tests/_reflecta/
# generated test files) is not hand-written and intentionally contains unused
# imports, non-standard style, etc.
exclude = ["eval/recordings", "**/_reflecta"]
